SONARIAC-629 Adapt Heredoc form parsing to be closer to what Exec and Shell form do